--- a/routine_html/routine_7.html
+++ b/routine_html/routine_7.html
@@ -5,64 +5,105 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bedtime_Routine</title>
-    <link rel="stylesheet" href="../CSS/routine_css/routine_7.css">
+    <link rel="stylesheet" href="../CSS/routine_css/routine.css">
 </head>
 <body>
-    <div class="navbar">
-        <a href="../index.html"><p>Home</p></a>
-    </div>
     <div class="main">
-        <div class="text1"><h4>Bedtime_Routine</h4></div>
-        <div class="todo">
-            <div class="image-container">
-                <img src="../icon/eat.png">
-                <p>Eating/Drinking</p>
-                <div class="dot1"></div>
-            </div>
-            <div class="image-container">
-                <img src="../icon/games.png">
-                <p>Game</p>
-                <div class="dot2"></div>
-            </div>
-            <div class="image-container">
-                <img src="../icon/music.png">
-                <p>Music</p>
-                <div class="dot3"></div>
-            </div>
-            <div class="image-container">
-                <img src="../icon/video.png">
-                <p>Video</p>
-                <div class="dot4"></div>
-            </div>
-            <div class="image-container">
-                <img src="../icon/sleep-mask.png">
-                <p>Blinder</p>
-                <div class="dot5"></div>
-            </div>
+        <div class="navbar">
+            <input type="checkbox">
+            <span></span>
+            <span></span>
+                <ul>
+                    <li><a href="../index.html">HOME</a></li>
+                    <li><a href="../mood_html/mood_5.html">MOOD 7th</a></li>
+                    <li><a href="../story_html/story_5.html">STORY 7th</a></li>
+                </ul>
         </div>
-        <div class="text2"><h4>Sleep position</h4></div>
-        <div class="position">
-            <div class="image-container">
-                <img class="p1" src="../icon/back.png">
-                <p>Back</p>
-                <div class="dot6"></div>
+        <div class="ball">
+            <iframe 
+            src="https://my.spline.design/interactivespherescopy-0d14f0aa90112fafa650fce70ff55403/"
+            frameborder ="0"
+            width="100%"
+            height="100%"></iframe>
+        </div>
+        <div class="box">
+            <div class="box1">
+                <span class="title1">To-do before sleeping</span>
+                <span class="line1"></span>
+                <div class="img_todo">
+                    <img src="../icon/eat.png" alt="eat">
+                    <img src="../icon/games.png" alt="game">
+                    <img src="../icon/music.png" alt="music">
+                    <img src="../icon/video.png" alt="video">
+                    <img src="../icon/sleep-mask.png" alt="blinder">
+                </div>
+                <div class="text_todo">
+                    <span>Eat/Drink</span>
+                    <span>Games</span>
+                    <span>Music/Audio content</span>
+                    <span>Video</span>
+                    <span>Eye-mask</span>
+                </div>
+                <div class="dot_todo">
+                    <label class="container">
+                        <input type="checkbox" name="radio">
+                        <span class="checkmark"></span>
+                      </label>
+                      <label class="container">
+                        <input type="checkbox" checked="checked" name="radio">
+                        <span class="checkmark"></span>
+                      </label>
+                      <label class="container">
+                        <input type="checkbox" name="radio">
+                        <span class="checkmark"></span>
+                      </label>
+                      <label class="container">
+                        <input type="checkbox" checked="checked" name="radio">
+                        <span class="checkmark"></span>
+                      </label>
+                      <label class="container">
+                        <input type="checkbox" name="radio">
+                        <span class="checkmark"></span>
+                      </label>
+                </div>
             </div>
-            <div class="image-container">
-                <img class="p2" src="../icon/fetal.png">
-                <p>Fetal</p>
-                <div class="dot7"></div>
-            </div>
-            <div class="image-container">
-                <img class="p3" src="../icon/side.png">
-                <p>Side</p>
-                <div class="dot8"></div>
-            </div>
-            <div class="image-container">
-                <img class="p4" src="../icon/stomach.png">
-                <p>Stomach</p>
-                <div class="dot9"></div>
+            <div class="box2">
+                <span class="title2">Sleep Position</span>
+                <span class="line2"></span>
+                <div class="img_position">
+                    <img src="../icon/back.png" alt="back">
+                    <img src="../icon/fetal.png" alt="fetal">
+                    <img src="../icon/side.png" alt="side">
+                    <img src="../icon/stomach.png" alt="stomach">
+                </div>
+                <div class="text_position">
+                    <span>Back</span>
+                    <span>Fetal</span>
+                    <span>Side</span>
+                    <span>Stomach</span>
+                </div>
+                <div class="dot_position">
+                    <label class="container">
+                        <input type="checkbox" checked="checked" name="radio">
+                        <span class="checkmark"></span>
+                      </label>
+                      <label class="container">
+                        <input type="checkbox" name="radio">
+                        <span class="checkmark"></span>
+                      </label>
+                      <label class="container">
+                        <input type="checkbox" name="radio">
+                        <span class="checkmark"></span>
+                      </label>
+                      <label class="container">
+                        <input type="checkbox" name="radio">
+                        <span class="checkmark"></span>
+                      </label>
+                </div>
             </div>
         </div>
     </div>
+
+
 </body>
 </html>
