--- a/mood_html/mood_1.html
+++ b/mood_html/mood_1.html
@@ -9,17 +9,69 @@
 </head>
 <body>
     <div class="navbar">
-        <a href="../index.html"><p>Home</p></a>
+        <input type="checkbox">
+        <span></span>
+        <span></span>
+            <ul>
+                <li><a href="../index.html">HOME</a></li>
+                <li><a href="../routine_html/routine_1.html">ROUTINE 1st</a></li>
+                <li><a href="../story/story_html/story_1.html">STORY 1st</a></li>
+            </ul>
     </div>
     <div class="main">
-        <div class="mood1">
-            <h4>Mood before sleep</h4>
-            <img src="../icon/day1_mood.png" alt="mood1">
+        <div class="mood">
+            <p>" Mood of All Day "</p>
+            <div class="animation">
+                <iframe 
+                src='https://my.spline.design/untitled-26b3733af5126743eb678117e0c26ad5/' 
+                frameborder='0' width='100%' height='720vh'></iframe>
+            </div>
         </div>
-        <div class="text_mood1">
-            <p>I was in a good mood all day on Monday, but there was a history 
-               quiz on Tuesday, and I was very nervous about reviewing before 
-               going to bed.</p>
+        <div class="mood_day1">
+            <div class="morning">
+                <div class="color1">
+                    <p>interest</p>
+                    <div class="color_box1"></div>
+                </div>
+                <div class="details">
+                    <p>I woke up excited and curious about the school day ahead, eager for new 
+                        knowledge and discoveries. The possibilities energized my morning and 
+                        set a positive tone for the day.</p>
+                </div>
+            </div>
+            <div class="noon">
+                <div class="color2">
+                    <p>joy</p>
+                    <div class="color_box2"></div>
+                </div>
+                <div class="details">
+                    <p>At noon, I had a relaxing lunch at home with a friend. We chatted happily, 
+                        sharing recent experiences, and the pleasant conversation deepened our 
+                        friendship.</p>
+                </div>
+            </div>
+            <div class="afternoon">
+                <div class="color3">
+                    <p>superise</p>
+                    <div class="color_box3"></div>
+                </div>
+                <div class="details">
+                    <p>In the afternoon, my friend surprised me with homemade milk tea at school. 
+                        Her thoughtfulness touched me, brightened my day, and brought extra happiness.</p>
+                </div>
+            </div>
+            <div class="night">
+                <div class="color4">
+                    <p>vigilance</p>
+                    <div class="color_box4"></div>
+                </div>
+                <div class="details">
+                    <p>
+                        Before bed, I listened to a suspenseful crime story that kept me engaged and 
+                        eager to discover what would happen next. The tension added excitement and 
+                        thrill to end my day on a high note.</p>
+                </div>
+            </div>
         </div>
     </div>
 </body>
