--- a/mood_html/mood_2.html
+++ b/mood_html/mood_2.html
@@ -5,20 +5,71 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bedtime_Routine</title>
-    <link rel="stylesheet" href="../CSS/mood_CSS/mood_7.css">
+    <link rel="stylesheet" href="../CSS/mood_CSS/mood_2.css">
 </head>
 <body>
     <div class="navbar">
-        <a href="../index.html"><p>Home</p></a>
+        <input type="checkbox">
+        <span></span>
+        <span></span>
+            <ul>
+                <li><a href="../index.html">HOME</a></li>
+                <li><a href="../routine_html/routine_2.html">ROUTINE 2nd</a></li>
+                <li><a href="../story/story_html/story_2.html">STORY 2nd</a></li>
+            </ul>
     </div>
     <div class="main">
-        <div class="mood1">
-            <h4>Mood before sleep</h4>
-            <img src="../icon/day7_mood.png" alt="mood1">
+        <div class="mood">
+            <p>" Mood of All Day "</p>
+            <div class="animation">
+                <iframe 
+                src='https://my.spline.design/moodday1-6eb2a517a88027fd067e12f607188cac/' 
+                frameborder='0' width='100%' height='720vh'></iframe>
+            </div>
         </div>
-        <div class="text_mood1">
-            <p>Solved the problems in the homework before going to bed, and 
-               completed 60% of the homework progress. The mood is very happy.</p>
+        <div class="mood_day2">
+            <div class="morning">
+                <div class="color1">
+                    <p>anticipation</p>
+                    <div class="color_box1"></div>
+                </div>
+                <div class="details">
+                    <p> In the morning, I was happy to attend my major class, as I liked the 
+                        professor and was especially interested in web front-end development.</p>
+                </div>
+            </div>
+            <div class="noon">
+                <div class="color2">
+                    <p>serenity</p>
+                    <div class="color_box2"></div>
+                </div>
+                <div class="details">
+                    <p>At lunch time I made myself a lunch, I enjoyed cooking and felt it was 
+                        a way to release stress.</p>
+                </div>
+            </div>
+            <div class="afternoon">
+                <div class="color3">
+                    <p>ecstasy</p>
+                    <div class="color_box3"></div>
+                </div>
+                <div class="details">
+                    <p>Played Animal Crossing with my friends, there was a meteor shower on my 
+                        island today and many of my friends came to my house, we had a great 
+                        time playing together!</p>
+                </div>
+            </div>
+            <div class="night">
+                <div class="color4">
+                    <p>anticipation</p>
+                    <div class="color_box4"></div>
+                </div>
+                <div class="details">
+                    <p>At night, I felt a mix of anticipation and nervousness about the next day's 
+                        exam. Despite reviewing earlier and feeling prepared, I was still curious 
+                        and slightly anxious about the exam content.</p>
+                </div>
+            </div>
         </div>
     </div>
 </body>
