--- a/mood_html/mood_4.html
+++ b/mood_html/mood_4.html
@@ -9,18 +9,67 @@
 </head>
 <body>
     <div class="navbar">
-        <a href="../index.html"><p>Home</p></a>
+        <input type="checkbox">
+        <span></span>
+        <span></span>
+            <ul>
+                <li><a href="../index.html">HOME</a></li>
+                <li><a href="../routine_html/routine_4.html">ROUTINE 4th</a></li>
+                <li><a href="../story/story_html/story_4.html">STORY 4th</a></li>
+            </ul>
     </div>
     <div class="main">
-        <div class="mood1">
-            <h4>Mood before sleep</h4>
-            <img src="../icon/day4_mood.png" alt="mood1">
+        <div class="mood">
+            <p>" Mood of All Day "</p>
+            <div class="animation">
+                <iframe 
+                src='https://my.spline.design/moodday4-bf1ed9a414e7b3e21a5df53307a6087c/' 
+                frameborder='0' width='100%' height='720vh'></iframe>
+            </div>
         </div>
-        <div class="text_mood1">
-            <p>My mood today seems to be affected by the weather, and my mental 
-               state is not good because I stayed up late the day before. When 
-               I got home, it was late for dinner, and then I took a shower and 
-               lay in bed watching the Morden Family fall asleep.</p>
+        <div class="mood_day4">
+            <div class="morning">
+                <div class="color1">
+                    <p>serenity</p>
+                    <div class="color_box1"></div>
+                </div>
+                <div class="details">
+                    <p>In the morning, I felt peaceful and calm. Eating bread and yogurt brought 
+                        relaxation and joy, as everything seemed to unfold smoothly, marking a 
+                        wonderful start to the day.</p>
+                </div>
+            </div>
+            <div class="noon">
+                <div class="color2">
+                    <p>anticipation</p>
+                    <div class="color_box2"></div>
+                </div>
+                <div class="details">
+                    <p> At noon, I focused on perfecting the split-screen boards for tomorrow's 
+                        presentation, staying vigilant and excited, visualizing success, and 
+                        looking forward to sharing my creativity with classmates and teachers.</p>
+                </div>
+            </div>
+            <div class="afternoon">
+                <div class="color3">
+                    <p>amazement</p>
+                    <div class="color_box3"></div>
+                </div>
+                <div class="details">
+                    <p>In the afternoon, I went swimming with friends. Swimming made me happy, and 
+                        practicing underwater flips brought amazement when my friend succeeded a few times.</p>
+                </div>
+            </div>
+            <div class="night">
+                <div class="color4">
+                    <p>apprehension</p>
+                    <div class="color_box4"></div>
+                </div>
+                <div class="details">
+                    <p>In the evening, despite enjoying dinner and playtime, I grew uneasy thinking about 
+                        the next day's 1-on-1 meeting, feeling nervous about possible challenges.</p>
+                </div>
+            </div>
         </div>
     </div>
 </body>
