--- a/mood_html/mood_5.html
+++ b/mood_html/mood_5.html
@@ -9,18 +9,65 @@
 </head>
 <body>
     <div class="navbar">
-        <a href="../index.html"><p>Home</p></a>
+        <input type="checkbox">
+        <span></span>
+        <span></span>
+            <ul>
+                <li><a href="../index.html">HOME</a></li>
+                <li><a href="../routine_html/routine_5.html">ROUTINE 5th</a></li>
+                <li><a href="../story/story_html/story_5.html">STORY 5th</a></li>
+            </ul>
     </div>
     <div class="main">
-        <div class="mood1">
-            <h4>Mood before sleep</h4>
-            <img src="../icon/day5_mood.png" alt="mood1">
+        <div class="mood">
+            <p>" Mood of All Day "</p>
+            <div class="animation">
+                <iframe 
+                src='https://my.spline.design/moodday5-1dcba4db1f89dc74ec2adb3f7cd5f176/' 
+                frameborder='0' width='100%' height='720vh'></iframe>
+            </div>
         </div>
-        <div class="text_mood1">
-            <p>The rain is heavy today, the room is dark without the light. 
-                After lunch, I started to do my homework, and finished 30% 
-                until late at night. I also encountered a lot of coding 
-                problems and felt very anxious.</p>
+        <div class="mood_day5">
+            <div class="morning">
+                <div class="color1">
+                    <p>fear</p>
+                    <div class="color_box1"></div>
+                </div>
+                <div class="details">
+                    <p>I woke up suddenly from a dream, feeling alarmed and confused. After realizing it 
+                        was nearly 11 o'clock, I talked to my friend about the dream before preparing lunch.</p>
+                </div>
+            </div>
+            <div class="noon">
+                <div class="color2">
+                    <p>joy</p>
+                    <div class="color_box2"></div>
+                </div>
+                <div class="details">
+                    <p> I was in a good mood during lunch because the food was very tasty. The beautiful 
+                        lunch put me in a good mood and I enjoyed the relaxing time.</p>
+                </div>
+            </div>
+            <div class="afternoon">
+                <div class="color3">
+                    <p>apprehension</p>
+                    <div class="color_box3"></div>
+                </div>
+                <div class="details">
+                    <p>In the afternoon, I hurriedly packed up and headed to school. I felt a little anxious 
+                        because I had a 1v1 meeting and was a little nervous thinking about the upcoming meeting.</p>
+                </div>
+            </div>
+            <div class="night">
+                <div class="color4">
+                    <p>terro</p>
+                    <div class="color_box4"></div>
+                </div>
+                <div class="details">
+                    <p>When I got home, I accidentally spilled water on my laptop keyboard while watching a movie. 
+                        The laptop blacked out, leaving me nervous and scared, planning to take it for repair tomorrow.</p>
+                </div>
+            </div>
         </div>
     </div>
 </body>
