--- a/mood_html/mood_7.html
+++ b/mood_html/mood_7.html
@@ -9,16 +9,66 @@
 </head>
 <body>
     <div class="navbar">
-        <a href="../index.html"><p>Home</p></a>
+        <input type="checkbox">
+        <span></span>
+        <span></span>
+            <ul>
+                <li><a href="../index.html">HOME</a></li>
+                <li><a href="../routine_html/routine_7.html">ROUTINE 7th</a></li>
+                <li><a href="../story/story_html/story_7.html">STORY 7th</a></li>
+            </ul>
     </div>
     <div class="main">
-        <div class="mood1">
-            <h4>Mood before sleep</h4>
-            <img src="../icon/day7_mood.png" alt="mood1">
+        <div class="mood">
+            <p>" Mood of All Day "</p>
+            <div class="animation">
+                <iframe 
+                src='https://my.spline.design/moodday7-17373b97c78b7b9af38ff386941fd1f0/' 
+                frameborder='0' width='100%' height='720vh'></iframe>
+            </div>
         </div>
-        <div class="text_mood1">
-            <p>Solved the problems in the homework before going to bed, and 
-               completed 60% of the homework progress. The mood is very happy.</p>
+        <div class="mood_day7">
+            <div class="morning">
+                <div class="color1">
+                    <p>serenity</p>
+                    <div class="color_box1"></div>
+                </div>
+                <div class="details">
+                    <p>In the morning, after my friend's comfort, I felt much calmer. Yesterday's anxiety 
+                        had faded, and a sense of peace stayed with me, restoring my normal rhythm.</p>
+                </div>
+            </div>
+            <div class="noon">
+                <div class="color2">
+                    <p>joy</p>
+                    <div class="color_box2"></div>
+                </div>
+                <div class="details">
+                    <p> At lunchtime, I cooked udon noodles. The delicious broth and silky noodles brought 
+                        simple pleasure, and each bite left me feeling warm, relaxed, and happy as if all was 
+                        going well.</p>
+                </div>
+            </div>
+            <div class="afternoon">
+                <div class="color3">
+                    <p>surprise</p>
+                    <div class="color_box3"></div>
+                </div>
+                <div class="details">
+                    <p>In the afternoon, I tried turning on my computer again and, to my surprise, it started up 
+                        perfectly. I felt overwhelmed with excitement and awe as if solving a long-standing problem.</p>
+                </div>
+            </div>
+            <div class="night">
+                <div class="color4">
+                    <p>serenity</p>
+                    <div class="color_box4"></div>
+                </div>
+                <div class="details">
+                    <p>At night, I watched my favorite TV series in bed, fully immersed and relaxed. As the night deepened, 
+                        the relaxation carried me into sleep, ending the day on a wonderful note.</p>
+                </div>
+            </div>
         </div>
     </div>
 </body>
