--- a/routine_html/routine_2.html
+++ b/routine_html/routine_2.html
@@ -16,7 +16,7 @@
                 <ul>
                     <li><a href="../index.html">HOME</a></li>
                     <li><a href="../mood_html/mood_2.html">MOOD 2nd</a></li>
-                    <li><a href="../story_html/story_2.html">STORY 2nd</a></li>
+                    <li><a href="../story/story_html/story_2.html">STORY 2nd</a></li>
                 </ul>
         </div>
         <div class="ball">
