--- a/mood_html/mood_3.html
+++ b/mood_html/mood_3.html
@@ -9,16 +9,69 @@
 </head>
 <body>
     <div class="navbar">
-        <a href="../index.html"><p>Home</p></a>
+        <input type="checkbox">
+        <span></span>
+        <span></span>
+            <ul>
+                <li><a href="../index.html">HOME</a></li>
+                <li><a href="../routine_html/routine_3.html">ROUTINE 3rd</a></li>
+                <li><a href="../story/story_html/story_3.html">STORY 3rd</a></li>
+            </ul>
     </div>
     <div class="main">
-        <div class="mood1">
-            <h4>Mood before sleep</h4>
-            <img src="../icon/day3_mood.png" alt="mood">
+        <div class="mood">
+            <p>" Mood of All Day "</p>
+            <div class="animation">
+                <iframe 
+                src='https://my.spline.design/moodday2-0a08d0b3153639b686d150098497e861/' 
+                frameborder='0' width='100%' height='720vh'></iframe>
+            </div>
         </div>
-        <div class="text_mood1">
-            <p>I was in a good mood today. I played online games with my 
-                friends before going to bed. We chat and interact together in the game.</p>
+        <div class="mood_day3">
+            <div class="morning">
+                <div class="color1">
+                    <p>fear</p>
+                    <div class="color_box1"></div>
+                </div>
+                <div class="details">
+                    <p>In the morning, I felt nervous and uneasy about the upcoming exams 
+                        and presentations. Despite preparing, the fear of unknown factors 
+                        left me worried about handling the challenges ahead.</p>
+                </div>
+            </div>
+            <div class="noon">
+                <div class="color2">
+                    <p>angry</p>
+                    <div class="color_box2"></div>
+                </div>
+                <div class="details">
+                    <p>At noon, I felt irritated and angry when the subway stopped due to 
+                        an accident. Being prepared but possibly late due to traffic issues 
+                        stressed me and disrupted my plans.</p>
+                </div>
+            </div>
+            <div class="afternoon">
+                <div class="color3">
+                    <p>joy</p>
+                    <div class="color_box3"></div>
+                </div>
+                <div class="details">
+                    <p>In the afternoon, I finished the exam and presentation, and all the 
+                        stress vanished. I felt relaxed, happy, and excited, relieved that 
+                        everything was completed successfully and back to normal.</p>
+                </div>
+            </div>
+            <div class="night">
+                <div class="color4">
+                    <p>acceptance</p>
+                    <div class="color_box4"></div>
+                </div>
+                <div class="details">
+                    <p>At night, I listened to soft music before bed, feeling peaceful and 
+                        content. Reflecting on the day's experiences, I relaxed and gradually 
+                        drifted into sleep with the music.</p>
+                </div>
+            </div>
         </div>
     </div>
 </body>
