--- a/mood_html/mood_6.html
+++ b/mood_html/mood_6.html
@@ -9,17 +9,67 @@
 </head>
 <body>
     <div class="navbar">
-        <a href="../index.html"><p>Home</p></a>
+        <input type="checkbox">
+        <span></span>
+        <span></span>
+            <ul>
+                <li><a href="../index.html">HOME</a></li>
+                <li><a href="../routine_html/routine_6.html">ROUTINE 6th</a></li>
+                <li><a href="../story/story_html/story_6.html">STORY 6th</a></li>
+            </ul>
     </div>
     <div class="main">
-        <div class="mood1">
-            <h4>Mood before sleep</h4>
-            <img src="../icon/day6_mood.png" alt="mood1">
+        <div class="mood">
+            <p>" Mood of All Day "</p>
+            <div class="animation">
+                <iframe 
+                src='https://my.spline.design/untitled-aed608c15b26403b8a568aef42cdab18/' 
+                frameborder='0' width='100%' height='720vh'></iframe>
+            </div>
         </div>
-        <div class="text_mood1">
-            <p>I got up early to work because I was worried about the project. 
-                I sat at my desk all day writing code, but the results were not 
-                satisfactory. Very angry!!</p>
+        <div class="mood_day6">
+            <div class="morning">
+                <div class="color1">
+                    <p>fear</p>
+                    <div class="color_box1"></div>
+                </div>
+                <div class="details">
+                    <p>Worried about water damage to my computer, I rushed out the door, filled with 
+                        anxiety and worry that my computer might be beyond repair.</p>
+                </div>
+            </div>
+            <div class="noon">
+                <div class="color2">
+                    <p>pensiveness</p>
+                    <div class="color_box2"></div>
+                </div>
+                <div class="details">
+                    <p> At the repair store, staff said liquid damage was complicated and unlikely to be 
+                        fixed. Disappointed, I carried the computer home, feeling powerless and thinking 
+                        about possible solutions.</p>
+                </div>
+            </div>
+            <div class="afternoon">
+                <div class="color3">
+                    <p>sadness</p>
+                    <div class="color_box3"></div>
+                </div>
+                <div class="details">
+                    <p>After lunch, my body was very tired and I lay down on my bed and fell asleep again 
+                        without realizing it. I felt physically and mentally exhausted from the whole day's 
+                        exhaustion and emotional stress.</p>
+                </div>
+            </div>
+            <div class="night">
+                <div class="color4">
+                    <p>acceptance</p>
+                    <div class="color_box4"></div>
+                </div>
+                <div class="details">
+                    <p>In the evening, my friend advised turning the computer over in a ventilated spot. 
+                        Their comfort helped me relax, gradually easing the day's fatigue.</p>
+                </div>
+            </div>
         </div>
     </div>
 </body>
