--- a/mood_html/mood_1.html
+++ b/mood_html/mood_1.html
@@ -15,7 +15,7 @@
             <ul>
                 <li><a href="../index.html">HOME</a></li>
                 <li><a href="../routine_html/routine_1.html">ROUTINE 1st</a></li>
-                <li><a href="../story/story_html/story_1.html">STORY 1st</a></li>
+                <li><a href="../story_html/story_1.html">STORY 1st</a></li>
             </ul>
     </div>
     <div class="main">
