--- a/mood_html/mood_2.html
+++ b/mood_html/mood_2.html
@@ -15,7 +15,7 @@
             <ul>
                 <li><a href="../index.html">HOME</a></li>
                 <li><a href="../routine_html/routine_2.html">ROUTINE 2nd</a></li>
-                <li><a href="../story/story_html/story_2.html">STORY 2nd</a></li>
+                <li><a href="../story_html/story_2.html">STORY 2nd</a></li>
             </ul>
     </div>
     <div class="main">
