--- a/mood_html/mood_4.html
+++ b/mood_html/mood_4.html
@@ -15,7 +15,7 @@
             <ul>
                 <li><a href="../index.html">HOME</a></li>
                 <li><a href="../routine_html/routine_4.html">ROUTINE 4th</a></li>
-                <li><a href="../story/story_html/story_4.html">STORY 4th</a></li>
+                <li><a href="../story_html/story_4.html">STORY 4th</a></li>
             </ul>
     </div>
     <div class="main">
