--- a/mood_html/mood_7.html
+++ b/mood_html/mood_7.html
@@ -15,7 +15,7 @@
             <ul>
                 <li><a href="../index.html">HOME</a></li>
                 <li><a href="../routine_html/routine_7.html">ROUTINE 7th</a></li>
-                <li><a href="../story/story_html/story_7.html">STORY 7th</a></li>
+                <li><a href="../story_html/story_7.html">STORY 7th</a></li>
             </ul>
     </div>
     <div class="main">
