--- a/routine_html/routine_4.html
+++ b/routine_html/routine_4.html
@@ -16,7 +16,7 @@
                 <ul>
                     <li><a href="../index.html">HOME</a></li>
                     <li><a href="../mood_html/mood_4.html">MOOD 4th</a></li>
-                    <li><a href="../story/story_html/story_4.html">STORY 4th</a></li>
+                    <li><a href="../story_html/story_4.html">STORY 4th</a></li>
                 </ul>
         </div>
         <div class="ball">
