--- a/routine_html/routine_6.html
+++ b/routine_html/routine_6.html
@@ -16,7 +16,7 @@
                 <ul>
                     <li><a href="../index.html">HOME</a></li>
                     <li><a href="../mood_html/mood_1.html">MOOD 6th</a></li>
-                    <li><a href="../story/story_html/story_6.html">STORY 6th</a></li>
+                    <li><a href="../story_html/story_6.html">STORY 6th</a></li>
                 </ul>
         </div>
         <div class="ball">
