--- a/story_html/story_4.html
+++ b/story_html/story_4.html
@@ -179,9 +179,9 @@
     <span></span>
     <span></span>
     <ul>
-        <li><a href="/index.html">HOME</a></li>
-        <li><a href="/routine_html/routine_4.html">ROUTINE 4th</a></li>
-        <li><a href="/mood_html/mood_4.html">MOOD 4th</a></li>
+        <li><a href="../index.html">HOME</a></li>
+        <li><a href="../routine_html/routine_4.html">ROUTINE 4th</a></li>
+        <li><a href="../mood_html/mood_4.html">MOOD 4th</a></li>
     </ul>
 </div>
 
