--- a/index.html
+++ b/index.html
@@ -43,13 +43,12 @@
                 <h6>"Let's journey into my dream world together..."</h6>
             </div>
         </div>
-        <div src="./story/story/story_html/story_1.html"></div>
         <div class="box_three">
             <div class="all_branch">
                 <span class="text_ex">"Click on the leaf to select content"</span>
                 <img src="./img/branch.png" alt="branch" style="height: 600px; width: 280px;"> 
                 <div class="day1" onclick="handleClick(event)" onmouseout="handleOff()">
-                    <div class="story1" id="hover_text1" data-url="./story/story_html/story_1.html">
+                    <div class="story1" id="hover_text1" data-url="./story_html/story_1.html">
                         <div class="hover_text1" id="hover_text1">
                             <p id="p1" style="display:none;">Dream of day1</p>
                         </div>
@@ -66,7 +65,7 @@
                     </div>
                 </div>                
                 <div class="day2" onclick="handleClick(event)" onmouseout="handleOff()">
-                    <div class="story2" id="hover_text4" data-url="./story/story_html/story_2.html">
+                    <div class="story2" id="hover_text4" data-url="./story_html/story_2.html">
                         <div class="hover_text4" id="hover_text4">
                             <p id="p4" style="display:none;">Dream of day2</p>
                         </div>
@@ -84,7 +83,7 @@
                 </div>     
 
                 <div class="day3" onclick="handleClick(event)" onmouseout="handleOff()">
-                    <div class="story3" id="hover_text7" data-url="./story/story_html/story_3.html">
+                    <div class="story3" id="hover_text7" data-url="./story_html/story_3.html">
                         <div class="hover_text7" id="hover_text7">
                             <p id="p7" style="display:none;">Dream of day3</p>
                         </div>
@@ -101,7 +100,7 @@
                     </div>
                 </div>     
                 <div class="day4" onclick="handleClick(event)" onmouseout="handleOff()">
-                    <div class="story4" id="hover_text10" data-url="./story/story_html/story_4.html">
+                    <div class="story4" id="hover_text10" data-url="./story_html/story_4.html">
                         <div class="hover_text10" id="hover_text10">
                             <p id="p10" style="display:none;">Dream of day4</p>
                         </div>
@@ -118,7 +117,7 @@
                     </div>
                 </div>     
                 <div class="day5" onclick="handleClick(event)" onmouseout="handleOff()">
-                    <div class="story5" id="hover_text13" data-url="./story/story_html/story_5.html">
+                    <div class="story5" id="hover_text13" data-url="./story_html/story_5.html">
                         <div class="hover_text13" id="hover_text3">
                             <p id="p13" style="display:none;">Dream of day5</p>
                         </div>
@@ -135,7 +134,7 @@
                     </div>
                 </div>     
                 <div class="day6" onclick="handleClick(event)" onmouseout="handleOff()">
-                    <div class="story6" id="hover_text16" data-url="./story/story_html/story_6.html">
+                    <div class="story6" id="hover_text16" data-url="./story_html/story_6.html">
                         <div class="hover_text16" id="hover_text16">
                             <p id="p16" style="display:none;">Dream of day6</p>
                         </div>
@@ -152,7 +151,7 @@
                     </div>
                 </div>     
                 <div class="day7" onclick="handleClick(event)" onmouseout="handleOff()">
-                    <div class="story7" id="hover_text19" data-url="./story/story_html/story_7.html">
+                    <div class="story7" id="hover_text19" data-url="./story_html/story_7.html">
                         <div class="hover_text19" id="hover_text19">
                             <p id="p19" style="display:none;">Dream of day7</p>
                         </div>
