--- a/mood_html/mood_3.html
+++ b/mood_html/mood_3.html
@@ -15,7 +15,7 @@
             <ul>
                 <li><a href="../index.html">HOME</a></li>
                 <li><a href="../routine_html/routine_3.html">ROUTINE 3rd</a></li>
-                <li><a href="../story/story_html/story_3.html">STORY 3rd</a></li>
+                <li><a href="../story_html/story_3.html">STORY 3rd</a></li>
             </ul>
     </div>
     <div class="main">
