--- a/mood_html/mood_5.html
+++ b/mood_html/mood_5.html
@@ -15,7 +15,7 @@
             <ul>
                 <li><a href="../index.html">HOME</a></li>
                 <li><a href="../routine_html/routine_5.html">ROUTINE 5th</a></li>
-                <li><a href="../story/story_html/story_5.html">STORY 5th</a></li>
+                <li><a href="../story_html/story_5.html">STORY 5th</a></li>
             </ul>
     </div>
     <div class="main">
