--- a/mood_html/mood_6.html
+++ b/mood_html/mood_6.html
@@ -15,7 +15,7 @@
             <ul>
                 <li><a href="../index.html">HOME</a></li>
                 <li><a href="../routine_html/routine_6.html">ROUTINE 6th</a></li>
-                <li><a href="../story/story_html/story_6.html">STORY 6th</a></li>
+                <li><a href="../story_html/story_6.html">STORY 6th</a></li>
             </ul>
     </div>
     <div class="main">
