--- a/routine_html/routine_3.html
+++ b/routine_html/routine_3.html
@@ -16,7 +16,7 @@
                 <ul>
                     <li><a href="../index.html">HOME</a></li>
                     <li><a href="../mood_html/mood_3.html">MOOD 3rd</a></li>
-                    <li><a href="../story/story_html/story_3.html">STORY 3rd</a></li>
+                    <li><a href="../story_html/story_3.html">STORY 3rd</a></li>
                 </ul>
         </div>
         <div class="ball">
