--- a/routine_html/routine_7.html
+++ b/routine_html/routine_7.html
@@ -16,7 +16,7 @@
                 <ul>
                     <li><a href="../index.html">HOME</a></li>
                     <li><a href="../mood_html/mood_7.html">MOOD 7th</a></li>
-                    <li><a href="../story/story_html/story_7.html">STORY 7th</a></li>
+                    <li><a href="../story_html/story_7.html">STORY 7th</a></li>
                 </ul>
         </div>
         <div class="ball">
