--- a/story_html/story_1.html
+++ b/story_html/story_1.html
@@ -176,9 +176,9 @@
     <span></span>
     <span></span>
     <ul>
-        <li><a href="/index.html">HOME</a></li>
-        <li><a href="/routine_html/routine_1.html">ROUTINE 1st</a></li>
-        <li><a href="/mood_html/mood_1.html">MOOD 1st</a></li>
+        <li><a href="../index.html">HOME</a></li>
+        <li><a href="../routine_html/routine_1.html">ROUTINE 1st</a></li>
+        <li><a href="../mood_html/mood_1.html">MOOD 1st</a></li>
     </ul>
 </div>
 
