--- a/story_html/story_1.html
+++ b/story_html/story_1.html
@@ -307,13 +307,10 @@ treasury had a and steal as much
 gold coins as possible while they
 were changing shifts.
 
-I smoothly entered the treasury
-and happily placed the gold
-coins into my backpack. As I was
-getting ready to leave security
-came back and I had no choice
-but to make a rapid escape. The
-situation was quite thrilling.
+As I was leaving, the security backed
+ up and I had no choice but to make a
+  quick getaway. It was quite an exciting
+   situation.
         </pre>
     </div>
 </div>
