--- a/story_html/story_4.html
+++ b/story_html/story_4.html
@@ -327,36 +327,25 @@
         <pre class="right-text">
 <span class="right_title">Dream of the 4th Day</span>
 
-It felt like I was watching an immersive
-movie where I wasn't the main character,
-but in the first person perspective of the
-main character. The protagonist is a
-rogue thief tasked with infiltrating a
-heavily guarded private exhibition held
-by the Mafia. His goal was to retrieve a
-beautifully crafted vase.
+It felt like watching an immersive movie. I was not the 
+main character, but watching from a first person perspective. 
+The main character is a thief whose task is to infiltrate an 
+exhibition organized by the Mafia. His goal is to take back 
+a beautiful vase.
 
-In the beginning, the protagonist and
-two teammates skillfully lure two guards
-at the basement entrance. After all is
-well, the protagonist enters the exhibition
-alone and begins to search for the
-precious vase. The entire exhibition is
-filled with sculptures, all made of pale
-pink ceramics decorated with
-shimmering, crystal-like shards that
-glinter in the light.
+At the beginning, the thief and his two helpers skillfully 
+draw away two security guys at the entrance of the basement. 
+After everything goes well, the protagonist enters the exhibition 
+hall alone and starts searching for the precious vase. The 
+entire exhibition is made of light pink ceramics decorated with
+crystal shards that sparkle in the light.
 
-When he finally found the vase and held
-it in his hand to examine it, the alarm
-suddenly sounded. What follows is a
-heated chase between the protagonist
-and the building's security team. He was
-preparing to escape, but just as freedom
-seemed within reach, he hearda familiar
-voice. As he turned around, he was
-knocked down from behind and passed
-out. At that moment, I woke up.
+When he finally finds the vase and holds it in his hands to 
+scrutinize it, an alarm suddenly goes off. What followed was 
+a fierce chase between the thief and the building's security 
+staff. He was ready to run away, but just then he heard a familiar 
+voice. When he turned around he was slammed from behind and knocked 
+unconscious. That's when I woke up too.
         </pre>
     </div>
 </div>
