--- a/story_html/story_1.html
+++ b/story_html/story_1.html
@@ -307,10 +307,10 @@ treasury had a and steal as much
 gold coins as possible while they
 were changing shifts.
 
-As I was leaving, the security backed
- up and I had no choice but to make a
-  quick getaway. It was quite an exciting
-   situation.
+As I was leaving, the security 
+backed up and I had no choice but 
+to make a quick getaway. It was 
+quite an exciting situation.
         </pre>
     </div>
 </div>
