--- a/story_html/story_4.html
+++ b/story_html/story_4.html
@@ -327,24 +327,32 @@
         <pre class="right-text">
 <span class="right_title">Dream of the 4th Day</span>
 
-It felt like watching an immersive movie. I was not the 
-main character, but watching from a first person perspective. 
-The main character is a thief whose task is to infiltrate an 
-exhibition organized by the Mafia. His goal is to take back 
-a beautiful vase.
+It felt like watching an immersive movie. 
+I was not the main character, but 
+watching from a first person perspective. 
+The main character is a thief whose task 
+is to infiltrate an exhibition organized 
+by the Mafia. His goal is to take back a 
+beautiful vase.
 
-At the beginning, the thief and his two helpers skillfully 
-draw away two security guys at the entrance of the basement. 
-After everything goes well, the protagonist enters the exhibition 
-hall alone and starts searching for the precious vase. The 
-entire exhibition is made of light pink ceramics decorated with
-crystal shards that sparkle in the light.
+At the beginning, the thief and his two 
+helpers skillfully draw away two security 
+guys at the entrance of the basement. 
+After everything goes well, the protagonist 
+enters the exhibition hall alone and starts 
+searching for the precious vase. The entire 
+exhibition is made of light pink ceramics 
+decorated withcrystal shards that sparkle 
+in the light.
 
-When he finally finds the vase and holds it in his hands to 
-scrutinize it, an alarm suddenly goes off. What followed was 
-a fierce chase between the thief and the building's security 
-staff. He was ready to run away, but just then he heard a familiar 
-voice. When he turned around he was slammed from behind and knocked 
+When he finally finds the vase and holds it 
+in his hands to scrutinize it, an alarm 
+suddenly goes off. What followed was a 
+fierce chase between the thief and the 
+building's security staff. He was ready to 
+run away, but just then he heard a familiar 
+voice. When he turned around he was 
+slammed from behind and knocked 
 unconscious. That's when I woke up too.
         </pre>
     </div>
